# zaqar-specs

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  template.rst  tox.ini
doc/source/: conf.py  contributing.rst  index.rst  readme.rst  template.rst
specs/: backlog-template.rst  index.rst  new-storage-driver-template.rst  template.rst
specs/backlog/: email-notification.rst  index.rst  persistent-transport.rst
specs/juno/: index.rst
specs/kilo/: define-a-wire-protocol.rst  fifo-optional.rst  index.rst  notification-api.rst  osprofiler.rst  persistent-transport.rst  storage-capabilities.rst
specs/liberty/: email-notification.rst  finish-client-support-for-v1.1-features.rst  index.rst  policy_support.rst  pre-signed-url.rst  tests-refactoring.rst
specs/mitaka/: index.rst  more-reserved-queue-attributes.rst  websocket-binary-support.rst
specs/newton/: index.rst  lazy-queues-in-subscriptions.rst  mistral-notifications.rst  subscription-confirmation-support.rst
specs/ocata/: index.rst  osprofiler.rst  purge-queue.rst  swift-storage.rst
specs/pike/: dead_letter_queue.rst  index.rst  notification-delivery-policy.rst
specs/queens/: delayed-queues.rst  index.rst  remove-pool-group-from-zaqar.rst  support-md5-of-body.rst  support-more-backoff-functions.rst  support-redis-as-mgmt-storage-backend.rst
specs/rocky/: index.rst  introduce-topic-resource-for-notification.rst  queue-filter-support.rst  remove-format-constraint-of-client-id.rst  subscription-filtering-tags.rst
tests/: test_title.py
(+16 files in other folders)
